# bidking-booooot

./: .gitignore  README.md  out.txt  pyproject.toml
configs/: config.json  pricing.json  runtime.json
configs/pricing.maps/: 1.json  2.json  210.json  230.json  240.json  250.json  440.json  450.json  5.json  6.json  README.md
data/: RELEASE_NOTE_since_v1.11.md  Skill.txt  Skill_export.csv  calculator_data_merged.csv  drop_table_weights.csv  item_prices_category.csv  map_quality_avg_out.csv
scripts/: build_windows.bat  build_windows.ps1
src/bidking/: __init__.py
src/bidking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bidking/analysis/: __init__.py  _board_pricing.py  _shape_wh.py  fraud_empty_cells.py  grid_overlay.py  grid_overlay_dims.py  grid_overlay_infer_shapes.py  grid_overlay_item_merge.py  grid_overlay_vacant_zone.py  map_avg_csv.py  quality_stats.py  raw_pricing.py  scan_inference.py  snapshot.py  tier_combo_presolve.py  unknown_value.py  vacant.py
src/bidking/bridge/: __init__.py  snapshot_file.py  snapshot_store.py
src/bidking/config/: __init__.py  map_runtime_overlay.py  paths.py  pricing.py  runtime.py
src/bidking/interaction/: __init__.py  _bid_history_parser.py  _central_info_parser.py  _legacy_aisha.py  _legacy_bot.py  board_snapshot_util.py  input.py  observe.py  ocr.py  round_flow.py  text_patch.py  window.py
src/bidking/logsys/: __init__.py  (+5 more)
tests/: test_bridge.py  test_config.py  test_smoke_pipeline.py
tests/analysis/: test_board_pricing.py  test_fraud_empty_cells.py  test_map_avg_csv.py  test_raw_pricing_bounds.py  test_scan_inference.py
tests/parsing/: test_game_report_csv.py  test_log_source_skill_subset.py
tests/pricing/: test_compute_smoke.py  test_post_process.py  test_secret_auction_opponent.py  test_strategy.py
tests/tools/: test_game_tables.py  test_skill_table.py
tools/: jianying_combo_report.csv  jianying_combo_report.py  jianying_combo_report.txt  jianying_combo_report_3.csv  jianying_combo_report_3.txt  jianying_combo_report_category.txt  map_quality_avg_out.csv  map_quality_avg_prices.py  window_backend.py
(+61 files in other folders)
