[project]
name = "bidking"
version = "0.1.0"
description = "BidKing: 分层架构的自动化竞拍机器人 + 画板看板"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pyautogui>=0.9.54",
    # RapidOCR：Python <3.13 用旧的 onnxruntime 发行；Python >=3.13 用新名 ``rapidocr``。
    "rapidocr-onnxruntime>=1.3.24; python_version < '3.13'",
    "rapidocr>=2.0.0; python_version >= '3.13'",
    "onnxruntime>=1.18.0",
    "psutil>=5.9.8",
]

[project.scripts]
bidking-bot = "bidking.runner.bot_main:main"
bidking-aisha = "bidking.runner.aisha_main:main"
bidking-viewer = "bidking.runner.viewer_main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.20.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
