[project]
name = "bidking"
version = "1.21"
description = "BidKing: 分层架构的画板看板+自动化竞拍机器人"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pyautogui>=0.9.54",
    # 2.0.6 起 wheel 的 requires_python 含 3.13；默认 ONNX 引擎依赖 onnxruntime（上游未写入 Requires）。
    "rapidocr>=2.0.6",
    "onnxruntime>=1.18.0",
    "psutil>=5.9.8",
]

[project.scripts]
bidking-bot = "bidking.runner.bot_main:main"
bidking-aisha = "bidking.runner.aisha_main:main"
bidking-viewer = "bidking.runner.viewer_main:main"
bidking-parse-log = "bidking.parsing.parse_log:main"
bidking-game-tables = "bidking.tools.game_tables:main"
bidking-skill-table = "bidking.tools.skill_table:main"
bot_runner = "bidking.ui.app:main"
grid_view = "bidking.runner.viewer_main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.20.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
